Switch verify template for vnfsdk
vnfsdk-compliance does not have a root pom file.
Switch to a submodule pom file template to be able
to parse the correct pom file location.

Change-Id: I002879da9bc1c14361fe6ed7e05ed77f3e3990ca
Issue-ID: CIMAN-123
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-compliance.yaml
+++ b/jjb/vnfsdk/vnfsdk-compliance.yaml
@@ -6,7 +6,7 @@
       - gerrit-maven-clm:
           java-version: ''
           mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
-      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-aai-docker-java-daily':
@@ -18,6 +18,10 @@
           mvn-profile: 'docker'
 
     project: 'vnfsdk/compliance'
+    subproject:
+      - 'veslibrary':
+          pom: 'veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
+          pattern: 'veslibrary/**'
     stream:
       - 'master':
           branch: 'master'
