Add common directory for multicloud
Issue-ID: MULTICLOUD-138

Change-Id: Icd5398558e6f545b169c2548a64d82282fc7687d
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -22,6 +22,10 @@
           path: 'windriver'
           pattern: 'windriver/**'
           pom: 'windriver/pom.xml'
+      - 'common':
+          path: 'common'
+          pattern: 'common/**'
+          pom: 'common/pom.xml'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-verify-java'
