Updating APPC CSIT Jenkins job for APPC
Directing Amsterdam healthcheck requests from the Jenkins job to a
unique directory so that the proper images are tested against for CSIT.

Change-Id: I808f0a9728dc8a5d44407c542fe3185ceb713746
Issue-ID: APPC-410
Signed-off-by: Aaron Hay <ah415j@att.com>

--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -14,4 +14,7 @@
       - 'healthcheck':
           trigger_jobs:
             - '{project-name}-{stream}-release-java-daily-checkstyle'
+      - 'healthcheck_amsterdam':
+          trigger_jobs:
+            - '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
