Move APPC merge node into an 8c-8g one
This change was done for the verify job, but not for the
merge job. The merge job is hitting the heap limit, just as
the verify job was.

Change-Id: I9e6f740f1fa5a479a3d286d1ca672c52034212a0
Signed-off-by: Patrick Brady <pb071s@att.com>
Issue-ID: CIMAN-121

--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -9,7 +9,8 @@
           build-timeout: 30
       - '{project-name}-{stream}-verify-java':
           build-node: ubuntu1604-basebuild-8c-8g
-      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-merge-java':
+          build-node: ubuntu1604-basebuild-8c-8g
       - '{project-name}-{stream}-release-version-java-daily'
 
     project: 'appc'
