Update to ensure push only master branch
Issue-ID: AAI-603
Change-Id: Ic8e218604a94e27fe7476d9111d700141bdbcb36
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/jjb/aai/aai-model-loader-master.yaml
+++ b/jjb/aai/aai-model-loader-master.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
-    name: aai-search-data-service
-    project-name: 'aai-search-data-service'
+    name: aai-model-loader-master
+    project-name: 'aai-model-loader'
     jobs:
       - gerrit-maven-clm:
           java-version: ''
@@ -11,12 +11,11 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
           mvn-goals: 'docker:build'
-    project: 'aai/search-data-service'
+    project: 'aai/model-loader'
     stream:
       - 'master':
           branch: 'master'
-      - 'amsterdam':
-          branch: 'amsterdam'
-    mvn-settings: 'aai-search-data-service-settings'
+    mvn-settings: 'aai-model-loader-settings'
     files: '**'
     archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
