--- a/jjb/aai/aai-aai-common-releases.yaml
+++ b/jjb/aai/aai-aai-common-releases.yaml
@@ -1,27 +1,22 @@
 ---
 - project:
-    name: aai-resources
-    project-name: 'aai-resources'
+    name: aai-aai-common-release
+    project-name: 'aai-aai-common'
     jobs:
       - gerrit-maven-clm:
           java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
       - '{project-name}-{stream}-stage-site-java':
           site-pom: 'pom.xml'
           trigger-job: '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-aai-docker-java-version-daily':
-          pom: 'aai-resources/pom.xml'
-          mvn-goals: 'docker:build docker:push'
 
-    project: 'aai/resources'
+    project: 'aai/aai-common'
     stream:
-      - 'master':
-          branch: 'master'
       - 'amsterdam':
           branch: 'amsterdam'
-    mvn-settings: 'aai-resources-settings'
+    mvn-settings: 'aai-aai-common-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
