--- a/jjb/aai/aai-traversal-master.yaml
+++ b/jjb/aai/aai-traversal-master.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
-    name: aai-aai-common
-    project-name: 'aai-aai-common'
+    name: aai-traversal-master
+    project-name: 'aai-traversal'
     jobs:
       - gerrit-maven-clm:
           java-version: ''
@@ -11,14 +11,15 @@
       - '{project-name}-{stream}-stage-site-java':
           site-pom: 'pom.xml'
           trigger-job: '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-aai-docker-java-version-daily':
+          pom: 'aai-traversal/pom.xml'
+          mvn-goals: 'docker:build docker:push'
 
-    project: 'aai/aai-common'
+    project: 'aai/traversal'
     stream:
       - 'master':
           branch: 'master'
-      - 'amsterdam':
-          branch: 'amsterdam'
-    mvn-settings: 'aai-aai-common-settings'
+    mvn-settings: 'aai-traversal-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
