--- a/jjb/aai/aai-aai-common-master.yaml
+++ b/jjb/aai/aai-aai-common-master.yaml
@@ -1,23 +1,22 @@
 ---
 - project:
-    name: aai-model-loader
-    project-name: 'aai-model-loader'
+    name: aai-aai-common
+    project-name: 'aai-aai-common'
     jobs:
       - gerrit-maven-clm:
           java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-aai-docker-java-daily':
-          pom: 'pom.xml'
-          mvn-goals: 'docker:build'
-    project: 'aai/model-loader'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+
+    project: 'aai/aai-common'
     stream:
       - 'master':
           branch: 'master'
-      - 'amsterdam':
-          branch: 'amsterdam'
-    mvn-settings: 'aai-model-loader-settings'
+    mvn-settings: 'aai-aai-common-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
