--- a/jjb/aai/aai-rest-client.yaml
+++ b/jjb/aai/aai-rest-client.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: aai-rest-client
+    name: aai-rest-client-master
     project-name: 'aai-rest-client'
     jobs:
       - gerrit-maven-clm:
@@ -12,6 +12,20 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-rest-client-settings'
+    files: '**'
+    archive-artifacts: ''
+- project:
+    name: aai-rest-client-releases
+    project-name: 'aai-rest-client'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+    project: 'aai/rest-client'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-rest-client-settings'
