--- a/jjb/aai/aai-resources.yaml
+++ b/jjb/aai/aai-resources.yaml
@@ -19,6 +19,28 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-resources-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
+- project:
+    name: aai-resources-amsterdam
+    project-name: 'aai-resources'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-aai-docker-java-version-daily':
+          pom: 'aai-resources/pom.xml'
+          mvn-goals: 'docker:build docker:push'
+
+    project: 'aai/resources'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-resources-settings'
