--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: aai-sparky-be
+    name: aai-sparky-be-master
     project-name: 'aai-sparky-be'
     jobs:
       - gerrit-maven-clm:
@@ -15,6 +15,23 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-sparky-be-settings'
+    files: '**'
+    archive-artifacts: ''
+- project:
+    name: aai-sparky-be-releases
+    project-name: 'aai-sparky-be'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+    project: 'aai/sparky-be'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-sparky-be-settings'
