--- a/jjb/aai/aai-model-loader.yaml
+++ b/jjb/aai/aai-model-loader.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: aai-model-loader
+    name: aai-model-loader-master
     project-name: 'aai-model-loader'
     jobs:
       - gerrit-maven-clm:
@@ -15,6 +15,25 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-model-loader-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
+---
+- project:
+    name: aai-model-loader-amsterdam
+    project-name: 'aai-model-loader'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
+    project: 'aai/model-loader'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-model-loader-settings'
