--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: aai-aai-common
+    name: aai-aai-common-master
     project-name: 'aai-aai-common'
     jobs:
       - gerrit-maven-clm:
@@ -16,6 +16,26 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-aai-common-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
+---
+- project:
+    name: aai-aai-common-amsterdam
+    project-name: 'aai-aai-common'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily-no-sonar'
+
+    project: 'aai/aai-common'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-aai-common-settings'
