--- a/jjb/aai/aai-traversal.yaml
+++ b/jjb/aai/aai-traversal.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: aai-traversal
+    name: aai-traversal-master
     project-name: 'aai-traversal'
     jobs:
       - gerrit-maven-clm:
@@ -19,6 +19,28 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'aai-traversal-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
+- project:
+    name: aai-traversal-releases
+    project-name: 'aai-traversal'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-aai-docker-java-version-daily':
+          pom: 'aai-traversal/pom.xml'
+          mvn-goals: 'docker:build docker:push'
+
+    project: 'aai/traversal'
+    stream:
       - 'amsterdam':
           branch: 'amsterdam'
     mvn-settings: 'aai-traversal-settings'
