--- a/jjb/ci-management/ci-management.yaml
+++ b/jjb/ci-management/ci-management.yaml
@@ -10,6 +10,7 @@
     branch: 'master'
     build-timeout: '60'
     build-node: 'centos7-basebuild-2c-1g'
+    jjb-version: 2.0.0
 
 - project:
     name: packer-jobs
