--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -15,7 +15,7 @@
           pattern: 'newton/**'
           pom: 'newton/pom.xml'
       - 'ocata':
-          path: 'ocata'
+          path: 'ocata:share'
           pattern: 'ocata/**'
           pom: 'ocata/pom.xml'
       - 'windriver':
