Add share directory for ocata
Change-Id: I82cdb5492d035410e2f8f146cf38dfcdb2dc0b20
Issue-ID: MULTICLOUD-138
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -16,7 +16,7 @@
           pom: 'newton/pom.xml'
       - 'ocata':
           path: 'ocata'
-          pattern: 'ocata/**'
+          pattern: 'ocata/**:share/**'
           pom: 'ocata/pom.xml'
       - 'windriver':
           path: 'windriver'
