Change lab job names
Change-Id: I567d4e5b991cca3762405b0c9c83eb08d938659d
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/lab/lab.yaml
+++ b/jjb/lab/lab.yaml
@@ -6,7 +6,8 @@
     lab-name:
       - "windriver"
     env-name:
-      - "jenkins"
+      - "beijing-heat"
+      - "beijing-oom"
     job-name:
       - "deploy"
       - "healthcheck"
