Add ocata_share subproject for share
Change-Id: I9217790f52a8e5ecad766107df6c34d3a72dbcf0
Issue-ID: MULTICLOUD-138
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -16,7 +16,11 @@
           pom: 'newton/pom.xml'
       - 'ocata':
           path: 'ocata'
-          pattern: 'ocata/**:share/**'
+          pattern: 'ocata/**'
+          pom: 'ocata/pom.xml'
+      - 'ocata_share':
+          path: 'ocata'
+          pattern: 'share/**'
           pom: 'ocata/pom.xml'
       - 'windriver':
           path: 'windriver'
