--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -16,7 +16,9 @@
           pom: 'newton/pom.xml'
       - 'ocata':
           path: 'ocata'
-          pattern: 'ocata/**:share/**'
+          pattern:
+            - 'ocata/**'
+            - 'share/**'
           pom: 'ocata/pom.xml'
       - 'windriver':
           path: 'windriver'
