Refactor external lab jobs
Change-Id: Iede6c823593af8f929fcbc727193df2c4a8b328c
Issue-ID: INT-401
Issue-ID: INT-402
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/lab/lab-templates.yaml
+++ b/jjb/lab/lab-templates.yaml
@@ -1,10 +1,10 @@
 ---
 - job-template:
-    name: 'lab-{lab-name}-{env-name}-{job-name}'
+    name: 'lab-{job-name}'
+    description: '{job-desc}'
     disabled: false
     project-type: freestyle
     build-node: ubuntu1604-basebuild-2c-1g
-    auth-token: lab
 
     properties:
       - lf-infra-properties:
@@ -31,6 +31,6 @@
 
     publishers:
       - integration-robot:
-          unstable-if: 0.0
+          unstable-if: 75.0
           pass-if: 100.0
       - lf-infra-publish
