Remove release-java-daily-no-sonar templates
gerrit-maven-sonar is now in place to run all the Sonar
scans. "release-java-daily-no-sonar" and "release-java-daily"
templates are exactly the same after removing the sonar goals.

Change-Id: Ie017c98e9d57ee31371f4a2ab47796febaf6f3dd
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdnc/sdnc-core.yaml
+++ b/jjb/sdnc/sdnc-core.yaml
@@ -11,7 +11,7 @@
           java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily-no-sonar'
+      - '{project-name}-{stream}-{subproject}-release-java-daily'
       - '{project-name}-{stream}-verify-java-skip-tests'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
