Add mvn-params for pom's file location
Added pom file location for integration, modeling
and vnfsdk

Issue-ID: CIMAN-126
Change-Id: I2b829ae78c50e423de437c248aba2b6d20894a54
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -29,6 +29,7 @@
     project: 'integration'
     project-name: 'integration'
     branch: 'master'
+    mvn-params: '-f version-manifest/pom.xml'
     mvn-settings: 'integration-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
