--- a/jjb/vnfsdk/vnfsdk-compliance.yaml
+++ b/jjb/vnfsdk/vnfsdk-compliance.yaml
@@ -38,6 +38,7 @@
     project: 'vnfsdk/compliance'
     project-name: 'vnfsdk-compliance'
     branch: 'master'
+    mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
     mvn-settings: 'vnfsdk-compliance-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
