Fix typo for sdnc sonar jobs
Fix typo for sdnc-core, sdnc-adaptors, sdc-oam
sdnc-plugins and sdnc-northbound

Change-Id: Id417e88cb5b6978a5c90d754e75409a91e456fd6
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdnc/sdnc-core.yaml
+++ b/jjb/sdnc/sdnc-core.yaml
@@ -31,14 +31,14 @@
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-2g
 - project:
-    name: sdc-core-sonar
+    name: sdnc-core-sonar
     jobs:
       - gerrit-maven-sonar
     build-node: ubuntu1604-basebuild-4c-4g
     java-version: ''
-    project: 'sdc/core'
-    project-name: 'sdc-core'
+    project: 'sdnc/core'
+    project-name: 'sdnc-core'
     branch: 'master'
-    mvn-settings: 'sdc-core-settings'
+    mvn-settings: 'sdnc-core-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
