--- a/jjb/sdnc/sdnc-plugins.yaml
+++ b/jjb/sdnc/sdnc-plugins.yaml
@@ -23,14 +23,14 @@
     files: '**'
     archive-artifacts: ''
 - project:
-    name: sdc-plugins-sonar
+    name: sdnc-plugins-sonar
     jobs:
       - gerrit-maven-sonar
     build-node: ubuntu1604-basebuild-4c-4g
     java-version: ''
-    project: 'sdc/plugins'
-    project-name: 'sdc-plugins'
+    project: 'sdnc/plugins'
+    project-name: 'sdnc-plugins'
     branch: 'master'
-    mvn-settings: 'sdc-plugins-settings'
+    mvn-settings: 'sdnc-plugins-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
