--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -24,14 +24,14 @@
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
 - project:
-    name: sdc-oam-sonar
+    name: sdnc-oam-sonar
     jobs:
       - gerrit-maven-sonar
     build-node: ubuntu1604-basebuild-4c-4g
     java-version: ''
-    project: 'sdc/oam'
-    project-name: 'sdc-oam'
+    project: 'sdnc/oam'
+    project-name: 'sdnc-oam'
     branch: 'master'
-    mvn-settings: 'sdc-oam-settings'
+    mvn-settings: 'sdnc-oam-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
