Fix sonar typos for vfc svnfm
Fix typos for project vfc/nfvo/driver/vnfm/svnfm

Change-Id: I86b4ad0649d3c8b7d3713e15fdfd6148382f7520
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
@@ -26,9 +26,9 @@
       - gerrit-maven-sonar
     build-node: ubuntu1604-basebuild-4c-4g
     java-version: ''
-    project: 'vfc/nfvo/driver/svnfm'
+    project: 'vfc/nfvo/driver/vnfm/svnfm'
     project-name: 'vfc-nfvo-driver-svnfm'
     branch: 'master'
-    mvn-settings: 'vfc-nfvo-driver-svnfm-settings'
+    mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
