Fix settings location vid-asdcclient
Change-Id: I493bc102f7c60040f29041be536bf5baa902255e
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vid/vid-asdcclient.yaml
+++ b/jjb/vid/vid-asdcclient.yaml
@@ -27,6 +27,6 @@
     project: 'vid/asdcclient'
     project-name: 'vid-asdcclient'
     branch: 'master'
-    mvn-settings: 'vid-asdcclient-settings'
+    mvn-settings: 'vid-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
