--- a/jjb/lab/lab.yaml
+++ b/jjb/lab/lab.yaml
@@ -8,5 +8,9 @@
           job-desc: "Heat-based deployment into Wind River lab Integration-Stable tenant"
       - "windriver-beijing-oom-deploy":
           job-desc: "OOM-based deployment into Wind River lab Integration-Jenkins tenant"
+      - "tlab-beijing-heat-deploy":
+          job-desc: "Heat-based deployment into AT&T TLAB Integration-HEAT-Test tenant"
+      - "tlab-beijing-oom-deploy":
+          job-desc: "OOM-based deployment into AT&T TLAB Integration-OOM-Test tenant"
       - "aws-beijing-oom-deploy":
           job-desc: "OOM-based deployment into AWS"
