Fix Sonar entries for VFC
Add separate entries for Nokia, ZTE and Huawei

Change-Id: I20077a1c4383e82f9699ce55e290c0db5ac381b3
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokia.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokia.yaml
@@ -22,3 +22,16 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
+- project:
+    name: vfc-nfvo-driver-vnfm-svnfm-nokia-sonar
+    jobs:
+      - gerrit-maven-sonar
+    mvn-params: '-f nokia/vnfmdriver/pom.xml'
+    build-node: ubuntu1604-basebuild-4c-4g
+    java-version: ''
+    project: 'vfc/nfvo/driver/vnfm/svnfm'
+    project-name: 'vfc-nfvo-driver-vnfm-svnfm'
+    branch: 'master'
+    mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
