--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
@@ -24,9 +24,10 @@
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
 - project:
-    name: vfc-nfvo-driver-vnfm-svnfm-sonar
+    name: vfc-nfvo-driver-vnfm-svnfm-zte-sonar
     jobs:
       - gerrit-maven-sonar
+    mvn-params: '-f zte/vmanager/pom.xml'
     build-node: ubuntu1604-basebuild-4c-4g
     java-version: ''
     project: 'vfc/nfvo/driver/vnfm/svnfm'
