Fix Sonar entries for VFC
Add separate entries for Nokia, ZTE and Huawei

Change-Id: I20077a1c4383e82f9699ce55e290c0db5ac381b3
Issue-ID: CIMAN-126
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
@@ -21,13 +21,14 @@
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
 - project:
-    name: vfc-nfvo-driver-svnfm-sonar
+    name: vfc-nfvo-driver-svnfm-huawei-sonar
     jobs:
       - gerrit-maven-sonar
     build-node: ubuntu1604-basebuild-4c-4g
+    mvn-params: '-f huawei/pom.xml'
     java-version: ''
     project: 'vfc/nfvo/driver/vnfm/svnfm'
-    project-name: 'vfc-nfvo-driver-svnfm'
+    project-name: 'vfc-nfvo-driver-svnfm-huawei'
     branch: 'master'
     mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
     mvn-goals: 'clean install'
