Modified file pattern for jjb for optf-has
Updated the job with correct pattern
to trigger changes for conductor directory.

Change-Id: I1e23eb35a8dfede2828759760dbd5ce8a4cf3df3
Issue-ID: OPTFRA-5
Signed-off-by: Dileep Ranganathan <dileep.ranganathan@intel.com>

--- a/jjb/optf/optf-has-python.yaml
+++ b/jjb/optf/optf-has-python.yaml
@@ -11,6 +11,6 @@
     subproject:
       - 'conductor':
           path: 'conductor'
-          pattern: 'has/**'
+          pattern: 'conductor/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
