--- a/jjb/music/music.yaml
+++ b/jjb/music/music.yaml
@@ -1,5 +1,30 @@
 ---
 - project:
+    name: music
+    project-name: 'music'
+    jobs:
+      - gerrit-maven-clm:
+          java-version: ''
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+          build-node: 'ubuntu1604-basebuild-8c-8g'
+
+    project: 'music'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'music-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-basebuild-4c-4g
+
+- project:
     name: music-sonar
     jobs:
       - gerrit-maven-sonar
