--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -31,3 +31,16 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
+- project:
+    name: portal-sdk-sonar
+    jobs:
+      - gerrit-maven-sonar
+    build-node: ubuntu1604-basebuild-4c-4g
+    java-version: ''
+    project: 'portal/sdk'
+    project-name: 'portal-sdk'
+    branch: 'master'
+    mvn-params: '-f ecomp-sdk/pom.xml'
+    mvn-settings: 'portal-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
