Move APPC clm node into an 8c-8g one
This change was done for the verify job and merge job,
but now the clm job is hitting the heap limit,
just as the others were.

Change-Id: I10e9d2f7e08a1b8da516bf2e3f18f78cf8b7f3be
Signed-off-by: Patrick Brady <pb071s@att.com>
Issue-ID: CIMAN-121

--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -7,6 +7,7 @@
           java-version: ''
           mvn-params: '-DskipTests'
           build-timeout: 30
+          build-node: ubuntu1604-basebuild-8c-8g
       - '{project-name}-{stream}-verify-java':
           build-node: ubuntu1604-basebuild-8c-8g
       - '{project-name}-{stream}-merge-java':
