--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -27,6 +27,8 @@
           branch: 'release-1.3.1'
       - 'release-1.3.2':
           branch: 'release-1.3.2'
+      - 'release-2.1.0':
+          branch: 'release-2.1.0'
     mvn-settings: 'portal-sdk-settings'
     files: '**'
     archive-artifacts: ''
