--- a/jjb/optf/optf-osdf-python.yaml
+++ b/jjb/optf/optf-osdf-python.yaml
@@ -7,10 +7,27 @@
       - 'master':
           branch: 'master'
     mvn-settings: 'optf-osdf-settings'
-    build-node: 'ubuntu1604-basebuild-4c-4g'
     subproject:
       - 'osdf':
           path: '.'
           pattern: '**'
+          pom: 'pom.xml'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
+      - '{project-name}-{stream}-{subproject}-verify-java'
+      - '{project-name}-{stream}-{subproject}-merge-java'
+    files: '**'
+    archive-artifacts: ''
+    build-node: 'ubuntu1604-basebuild-4c-4g'
+- project:
+    name: optf-osdf-sonar
+    jobs:
+      - gerrit-maven-sonar
+    build-node: ubuntu1604-basebuild-4c-4g
+    java-version: ''
+    project: 'optf/osdf'
+    project-name: 'optf-osdf'
+    branch: 'master'
+    mvn-settings: 'optf-osdf-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
